--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,6 +64,7 @@ ol[class] {
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
     text-decoration-skip-ink: auto;
+    text-decoration:none;
 }
 
 /* Упрощаем работу с изображениями */
