new pages, new hook, new common component Card

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,6 +86,10 @@ select {
     font: inherit;
 }
 
+.pointer:hover{
+    cursor:pointer;
+}
+
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
     * {
