--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,27 +6,28 @@
 /* Firefox */
 * {
     scrollbar-width: none;
-    scrollbar-color: #57beff #ffffff;
+    scrollbar-color: #57beff #aab7ff;
 }
 
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-    width: 16px;
+/*========== SCROLL BAR ==========*/
+::-webkit-scrollbar {
+    /* display: none; */
+    width: 0.6rem;
+    background-color: #aab7ff;
+    border-radius: 0.5rem;
 }
 
-*::-webkit-scrollbar-track {
-    background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #57beff;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
+    border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #4495c7;
 }
 
 body {
     height: 100vh;
-    overflow: hidden;
 }
 
 #root {
@@ -35,11 +36,9 @@ body {
     height: 100%;
 }
 
-nav{
+nav {
     flex: 0 0 auto;
 }
-
-
 
 /* Указываем box sizing */
 *,
